--- a/src/Login.css
+++ b/src/Login.css
@@ -1,13 +1,4 @@
-body {
-    font-size: 16px;
-    font-weight: 300;
-    color: #888;
-    line-height: 30px;
-    text-align: center;
-    font-family: "微软雅黑";
-}
-
-strong { font-weight: 500; }
+.top-content strong { font-weight: 500; }
 
 a, a:hover, a:focus {
     color: #4aaf51;
@@ -15,7 +6,7 @@ a, a:hover, a:focus {
     -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
 }
 
-h1, h2 {
+.top-content h1,.top-content  h2 {
     margin-top: 10px;
     font-size: 38px;
     font-weight: 100;
@@ -23,70 +14,23 @@ h1, h2 {
     line-height: 50px;
 }
 
-h3 {
+.top-content h3 {
     font-size: 22px;
     font-weight: 300;
     color: #555;
     line-height: 30px;
 }
 
-img { max-width: 100%; }
-
-::-moz-selection { background: #4aaf51; color: #fff; text-shadow: none; }
-::selection { background: #4aaf51; color: #fff; text-shadow: none; }
-
-
-.btn-link-1 {
-    display: inline-block;
-    height: 50px;
-    margin: 5px;
-    padding: 16px 20px 0 20px;
-    background: #4aaf51;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 16px;
-    color: #fff;
-    -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
-}
-.btn-link-1:hover, .btn-link-1:focus, .btn-link-1:active { outline: 0; opacity: 0.6; color: #fff; }
-
-.btn-link-1.btn-link-1-facebook { background: #4862a3; }
-.btn-link-1.btn-link-1-twitter { background: #55acee; }
-.btn-link-1.btn-link-1-google-plus { background: #dd4b39; }
-
-.btn-link-1 i {
-    padding-right: 5px;
-    vertical-align: middle;
-    font-size: 20px;
-    line-height: 20px;
-}
-
-.btn-link-2 {
-    display: inline-block;
-    height: 50px;
-    margin: 5px;
-    padding: 15px 20px 0 20px;
-    background: rgba(0, 0, 0, 0.3);
-    border: 1px solid #fff;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 16px;
-    color: #fff;
-    -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
-}
-.btn-link-2:hover, .btn-link-2:focus,
-.btn-link-2:active, .btn-link-2:active:focus { outline: 0; opacity: 0.6; background: rgba(0, 0, 0, 0.3); color: #fff; }
-
-
 /***** Top content *****/
 .inner-bg {
-    padding: 100px 0 170px 0;
+    padding: 158px 0 150px 0;
 }
 .register .inner-bg {
-    padding: 100px 0 100px 0;
+    padding: 148px 0 120px 0;
 }
 .top-content{
-    height: 825px;
+    height: 920px;
+    background-image: url("./img/loginBackground.jpg");
 }
 .top-content .text {
     color: #fff;
@@ -186,7 +130,7 @@ img { max-width: 100%; }
 
 @media (max-width: 415px) {
 
-    h1, h2 { font-size: 32px; }
+    .top-content h1,.top-content h2 { font-size: 32px; }
 
 }
 
