--- a/src/ErrorContentComponent.css
+++ b/src/ErrorContentComponent.css
@@ -18,6 +18,7 @@
     margin-bottom: 40px;
 }
 .Error-content .lost-task-area .back-button {
+    transition: all 0.6s ease-in-out;
     width: 200px;
     height: 80px;
     background: none;
@@ -26,6 +27,10 @@
     border: solid 2px #fff;
     font-weight: 700;
     font-size: 23px;
+}
+.Error-content .lost-task-area .back-button:hover {
+    background-color: white;
+    color: black;
 }
 .Error-content footer {
     position: fixed;
